Aug 17th, 2024 - Glabays Update
Notes:
- JDK Rollback
 - Moves the JDK from 17 to 11